# jax-project-template

./: .gitignore  README.md  pyproject.toml  run_project.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
project_name/: config.py  input_pipeline.py  optimizers.py  train.py  utils.py
project_name/data/: pipeline.py  utils.py
project_name/model/: config.py  features.py  integrate.py  mapping.py  model.py  modules.py  prng.py  utils.py
project_name/model/tf/: project_dataset.py  project_features.py  shape_placeholder.py
project_name/tensorflow_datasets/project_name/: CITATIONS.bib  checksums.tsv  project_name_dataset_builder.py  project_name_dataset_builder_test.py
scripts/: download_and_build_tfds.sh  run_deeprte.sh  run_eval.sh  run_project.sh  run_train.sh
